[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Baby Panda.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/BADABB__.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Interface/Interface.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="Interface" type="Node2D"]
script = ExtResource( 3 )

[node name="GameLabel" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = 360.476
margin_top = 198.941
margin_right = 734.476
margin_bottom = 260.941
custom_fonts/font = SubResource( 1 )
text = "Violeta Telequinetica"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
margin_left = 252.0
margin_top = 252.94
margin_right = 814.0
margin_bottom = 385.94
custom_fonts/font = SubResource( 2 )
text = "Moverse: Flechas
Levantar caja: Click izquierdo del mouse
Soltar caja: E
Pasar nivel: R"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 252.152
margin_top = 387.763
margin_right = 809.152
margin_bottom = 420.763
custom_fonts/font = SubResource( 3 )
text = "HAS QUE VIOLETA LLEGUE AL PENTAGONO Y PRESIONA LA R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBtn" type="Button" parent="."]
margin_left = 390.924
margin_top = 487.368
margin_right = 689.924
margin_bottom = 549.368
custom_fonts/font = SubResource( 4 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="pressed" from="StartBtn" to="." method="_on_StartBtn_pressed"]
